--- a/CSS/style.css
+++ b/CSS/style.css
@@ -615,7 +615,7 @@ textarea {
     font-size: 1.1em;
 }
 .booking-lateral {
-    background: url("imagenes/enjoying-rafting.jpg") no-repeat;
+    background: url("/imagenes/enjoying-rafting.jpg") no-repeat;
     padding: 10px;
 }
 .data-price {
@@ -687,7 +687,7 @@ textarea {
 .img-contact {
     height: 164px;
     margin: 10px 5px;
-    background-image: url("imagenes/rafting-contact.jpg");
+    background-image: url(/imagenes/rafting-contact.jpg);
     
 }
 
