--- a/CSS/style.css
+++ b/CSS/style.css
@@ -110,6 +110,8 @@ input[type=checkbox] {
     font-size: 25px;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
+     -webkit-user-select: none; /* Safari */
+     -ms-user-select: none; /* IE 10+ */
     user-select: none;
 }
     /* --  Position the "next button" to the right -- */
@@ -581,6 +583,8 @@ textarea {
 .hamburger {
     display: none;
     font-size: 24px;
+    -webkit-user-select: none; /* Safari */
+     -ms-user-select: none; /* IE 10+ */
     user-select: none;
 }
 
