--- a/CSS/style.css
+++ b/CSS/style.css
@@ -150,9 +150,9 @@ input[type=checkbox] {
     width: 100%;
 }
     /* -- The dots/bullets/indicators -- */
-    .dot-container {
-        text-align: center;
-    }
+.dot-container {
+    text-align: center;
+}
 .dot {
     cursor: pointer;
     height: 15px;
@@ -341,6 +341,8 @@ input {
 textarea {
     font-family: var(--font-family);
     font-size: 1rem;
+    width: 100%;
+    height: 300px;
 }
 .enviar {
     width: 30%;
@@ -361,6 +363,7 @@ textarea {
 .lateral-contact {
     display: none;
 }
+
 
 /* -- ACTIVITY PAGE -- */
     /* -- INTRO -- */
@@ -671,6 +674,7 @@ textarea {
     width: 100%;
     padding: 18px 5px 0px;
     height: 400px;
+    border: 0;
 }
 .img-contact h4 {
     width: 100%;
