--- a/CSS/style.css
+++ b/CSS/style.css
@@ -146,7 +146,7 @@ input[type=checkbox] {
     position: absolute;
     top: 0;
 }
-.numbertext img {
+.img-slide {
     width: 100%;
 }
     /* -- The dots/bullets/indicators -- */
