fixing drop menu index page

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,6 +51,7 @@
     left: 0;
     text-align: center;        
     padding: 10px 0;
+    top: 100%;
 }
 .menu li:hover {
     display: inline-block;
