--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,7 +10,7 @@
 }
 
    /* NAVBAR STYLING STARTS */
-   .navbar {
+.navbar {
     position: relative; 
     z-index: 1000;
     display: flex;
@@ -43,44 +43,72 @@
 }
 
 /* NAVBAR MENU */
-.menu {
+.topnav a, .dropdown .dropbtn {
     display: none;
-    position: absolute;
-    background-color: var(--background-color);
-    right: 0;
-    left: 0;
-    text-align: center;        
-    padding: 10px 0;
-    top: 100%;
 }
-.menu li:hover {
-    display: inline-block;
-    background-color: black;
-    transition: 0.3s ease;
+.icon {
+    float: right;
+    display: block;
+}
+.topnav.responsive {
+    position: absolute;
+    top: 100%;
+    background-color: var(--background-color);
     width: 100%;
 }
-.menu li{
-    margin-top: 12px;
-    font-size: 1.2em;
-    padding: 10px 0px;
-    font-weight: bold;
+.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
 }
-input[type=checkbox]:checked ~ .menu{
+.icon {
+    font-size: 1.8em;
+    padding: 8px;
+}
+.icon:hover {
+    background-color: black;
+}
+.topnav.responsive a {
+    float: none;
     display: block;
+    text-align: center;
+    padding: 5px;
+    text-transform: uppercase;
 }
-  /*  HAMBURGUER  */
-.hamburger {
+.topnav.responsive a:hover {
+    background-color: black;
+}
+.topnav.responsive .dropdown {
+    float: none;
+}
+.topnav.responsive .dropdown-content {
+    position: relative;
+}
+.topnav.responsive .dropdown .dropbtn {
     display: block;
-    padding: 6px 13px;
-    font-size: 2em;
+    width: 100%;
+    text-align: center;
+    border: 0px solid rgba(81, 122, 147, 0.822);
+    padding: 5px;
+    text-transform: uppercase;
+    font-family: var(--font-family);
+    font-size: 1.1em;
+    color: white;
+    background-color: rgba(81, 122, 147, 0.1);
+    outline: none;
 }
-.hamburger:hover {
+.topnav.responsive .dropdown .dropbtn:hover {
     background-color: black;
     color: rgb(59, 179, 248);
 }
-input[type=checkbox] {
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+.dropdown-content {
     display: none;
-} 
+    position: absolute;
+    z-index: 1;
+}
   /* -- ACCESIBILIDAD --  */
 .accebility {
     display: none;
@@ -523,16 +551,13 @@ textarea {
 /* -- NAVBAR --*/
 .navbar img {
     width: 50px;
-    margin: 5px 10px;
+    margin: 0px 10px;
 }
 .logo {
     font-size: 1.75em;
     padding: 0px 10px;
 }
-.hamburger {
-    font-size: 2em;
-    padding: 11px 13px;
-}
+
 .accebility {
     display: block;
     font-size: 1.75em;
@@ -560,25 +585,78 @@ textarea {
     display: flex;
     border-bottom: 10px solid black;
 }
-.menu {
+.topnav a, .dropdown .dropbtn {
+    display: inline;
+}
+.topnav {
+    overflow: hidden;
+}
+  
+.topnav a {
+    float: left;
     display: block;
-    position: relative;
-    background-color:rgb(59, 179, 248, 0);
+    text-align: center;
+    padding: 22px;
+    text-decoration: none;
+    font-size: 1.1em;
+    text-transform: uppercase;
 }
-.menu li {
-    display: inline;
-    margin-top: 0px;
-}
-.menu li:hover {
-    display: inline;
-    padding: 22px 0px;
-}
-.menu li a {
-    padding: 22px 20px;
-}
+  
 .active {
     background-color: black;
 }
+.icon {
+    display: none;
+}
+    
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+.dropbtn {
+    background-color: rgba(81, 122, 147, 0.1);
+}
+.dropdown .dropbtn {
+    font-size: 1.1em;
+    font-family: var(--font-family);
+    text-transform: uppercase;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 22px;
+}
+    
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: rgba(81, 122, 147, 0.822);
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+    
+.dropdown-content a {
+    float: none;
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+    
+.topnav a:hover, .dropdown:hover .dropbtn {
+    background-color: black;
+    color: rgb(59, 179, 248);
+}
+    
+.dropdown-content a:hover {
+    background-color: black;
+    color: rgb(59, 179, 248);
+}
+.dropdown:hover .dropdown-content {
+    display: block;
+} 
+
 /* -- SLIDE -- */
 .prev, .next {
     top: 40%;
@@ -589,14 +667,6 @@ textarea {
     font-size: 2em;
 }
 
-/* -- HAMBURGER MENU -- */
-.hamburger {
-    display: none;
-    font-size: 24px;
-    -webkit-user-select: none; /* Safari */
-     -ms-user-select: none; /* IE 10+ */
-    user-select: none;
-}
 
 /* -- ACTIVITY -- */
 .container-banner {
